feat: add element plus

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.1"
+    "nuxt": "3.0.0-rc.1",
+    "sass": "^1.50.1"
+  },
+  "dependencies": {
+    "element-plus": "^2.1.10"
   }
 }
